// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Accordion > renders correctly for fullBorder and filledBackground variant 1`] = `
<div>
  <div
    class="sc-bRKDuR bHjpxP sc-jwTyAe emHXsE"
  >
    <div
      class="sc-bRKDuR gwwejK sc-jJLAfE iWiHKP"
    >
      <div
        class="sc-hjsuWn hLwqBO"
      >
        <h2
          class="sc-bRKDuR bHjpxP sc-dTvVRJ jMSukC"
          cursor="inherit"
          title=""
        >
          How it works
        </h2>
      </div>
      <span
        class="sc-bRKDuR bHjpxP sc-fhHczv cTkdi sc-hwkwBN fqsjph"
        color="marzipan"
        data-testid="caret-container"
        rotate="0"
        size="24"
      >
        <svg
          fill="none"
          height="100%"
          viewBox="0 0 24 24"
          width="100%"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19.66 8.248a1 1 0 00-1.412.095L12 15.482l-6.248-7.14a1 1 0 10-1.504 1.317l7 8a.995.995 0 001.504 0l7-8a1 1 0 00-.093-1.411z"
            fill="currentColor"
          />
        </svg>
      </span>
    </div>
    <div
      class="sc-bRKDuR enIEuK"
    >
      Lots of brilliant information about this beautiful component
    </div>
  </div>
</div>
`;

exports[`Accordion > renders correctly when closed 1`] = `
<div>
  <div
    class="sc-bRKDuR bHjpxP sc-jwTyAe dRsXQD"
  >
    <div
      class="sc-bRKDuR jGGaUV sc-jJLAfE iWiHKP"
    >
      <div
        class="sc-hjsuWn hLwqBO"
      >
        <h2
          class="sc-bRKDuR bHjpxP sc-dTvVRJ jMSukC"
          cursor="inherit"
          title=""
        >
          How it works
        </h2>
      </div>
      <span
        class="sc-bRKDuR bHjpxP sc-fhHczv cTkdi sc-hwkwBN hNMPrg"
        color="marzipan"
        data-testid="caret-container"
        rotate="0"
        size="24"
      >
        <svg
          fill="none"
          height="100%"
          viewBox="0 0 24 24"
          width="100%"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19.66 8.248a1 1 0 00-1.412.095L12 15.482l-6.248-7.14a1 1 0 10-1.504 1.317l7 8a.995.995 0 001.504 0l7-8a1 1 0 00-.093-1.411z"
            fill="currentColor"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`Accordion > renders correctly when expanded 1`] = `
<div>
  <div
    class="sc-bRKDuR bHjpxP sc-jwTyAe dRsXQD"
  >
    <div
      class="sc-bRKDuR jGGaUV sc-jJLAfE iWiHKP"
    >
      <div
        class="sc-hjsuWn hLwqBO"
      >
        <h2
          class="sc-bRKDuR bHjpxP sc-dTvVRJ jMSukC"
          cursor="inherit"
          title=""
        >
          How it works
        </h2>
      </div>
      <span
        class="sc-bRKDuR bHjpxP sc-fhHczv cTkdi sc-hwkwBN fqsjph"
        color="marzipan"
        data-testid="caret-container"
        rotate="0"
        size="24"
      >
        <svg
          fill="none"
          height="100%"
          viewBox="0 0 24 24"
          width="100%"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19.66 8.248a1 1 0 00-1.412.095L12 15.482l-6.248-7.14a1 1 0 10-1.504 1.317l7 8a.995.995 0 001.504 0l7-8a1 1 0 00-.093-1.411z"
            fill="currentColor"
          />
        </svg>
      </span>
    </div>
    <div
      class="sc-bRKDuR hANJi"
    >
      Lots of brilliant information about this beautiful component
    </div>
  </div>
</div>
`;
